@@ -1,4 +1,2 @@
 # BetsAPI-parser
-App made to parse soccer games from betsapi.com and translate events to telegram via telegrambot 
-vm var 
---module-path ${PATH_TO_FX} --add-modules=javafx.controls,javafx.fxml
+App made to parse football matches from betsapi.com and notify user of matched events to telegram and desktop GUI.
